--- a/read_levels.ipynb
+++ b/read_levels.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "cred = credentials.Certificate(\"nonogram-48dd4-firebase-adminsdk-glxux-6872f3bf40.json\")\n",
+    "cred = credentials.Certificate(\"../keys/nonogram-48dd4-firebase-adminsdk-glxux-6872f3bf40.json\")\n",
     "firebase_admin.initialize_app(cred)"
    ]
   },
